--- a/Day14/css/global.css
+++ b/Day14/css/global.css
@@ -13,3 +13,10 @@
 header .header_fixed{
     background-color: #FFFFFF;
 }
+
+.owl-dots{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: 10px;
+}
